# cascade-scanner

./: .env.example  .gitignore  Dockerfile  REBOOT.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements-full.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
config/assets/: chennai_assets.yaml
config/environments/: development.yaml
config/fragility_curves/: chennai_v1.yaml
data/precipitation/: chennai_precip_20251028_20251127.json  chennai_precip_20251028_20251127_daily.csv
scripts/: download_data.py  seed_aura.py  verify_setup.py
src/api/: __init__.py  main.py
src/core/: __init__.py  drought_engine.py  formatter.py  parser.py  report.py  scanner.py
src/data_sources/: __init__.py  gee_client.py  imd_client.py  osm_client.py
src/graph/: __init__.py  connection.py  models.py  queries.py  seed.py
src/ml/: __init__.py  anomaly.py  temporal.py
src/ui/: app.py  app_local.py
src/utils/: config.py  constants.py  logger.py
